k8s/moneygr.yml
kind: Service
apiVersion: v1
metadata:
  name: moneygr-service
  namespace: moneygr
  labels:
    app: moneygr
spec:
  selector:
    app: moneygr
  ports:
  - protocol: TCP
    port: 8080
    nodePort: 30097
    name: http
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: moneygr
  namespace: moneygr
  labels:
    app: moneygr
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: moneygr
    spec:
      containers:
      - name: moneygr
        image: making/moneygr2
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            memory: "512Mi"
          requests:
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 180
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: moneygr-ingress
  namespace: moneygr
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - moneygr.ik.am
  rules:
  - host: moneygr.ik.am
    http:
      paths:
      - backend:
          serviceName: moneygr-service
          servicePort: 8080
